--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -115,11 +115,7 @@
             <div class="relative mx-auto max-w-5xl">
                 <div class="absolute -inset-1 bg-gradient-to-r from-gov-accent to-blue-600 rounded-xl blur opacity-20"></div>
                 <div class="relative rounded-xl border border-white/10 bg-gray-900 shadow-2xl overflow-hidden">
-                    <img src="path/to/image_480181.png" alt="BarangayOS Dashboard Interface" class="w-full h-auto opacity-90">
-                    <div class="absolute inset-0 flex flex-col items-center justify-center text-gray-500 bg-gray-900/50 -z-10">
-                        <i class="ph ph-desktop text-6xl mb-4"></i>
-                        <span>Dashboard Preview</span>
-                    </div>
+                    <img src="https://picsum.photos/seed/dashboard/1024/576" alt="BarangayOS Dashboard Interface" class="w-full h-auto opacity-90">
                 </div>
             </div>
         </div>
