--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -232,9 +233,9 @@
                     <span>&copy; 2024 BarangayOS. All rights reserved.</span>
                 </div>
                 <div class="flex gap-6">
-                    <a href="#" class="hover:text-white">Privacy Policy</a>
-                    <a href="#" class="hover:text-white">Terms of Service</a>
-                    <a href="#" class="hover:text-white">DILG Compliance</a>
+                    <a href="/privacy" class="hover:text-white">Privacy Policy</a>
+                    <a href="/terms" class="hover:text-white">Terms of Service</a>
+                    <a href="/compliance" class="hover:text-white">DILG Compliance</a>
                 </div>
             </div>
         </div>
